--- a/Modules/LocationPresenter/packages.config
+++ b/Modules/LocationPresenter/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Caliburn.Micro" version="2.0.2" targetFramework="net45" />
-  <package id="Caliburn.Micro.Core" version="2.0.2" targetFramework="net45" />
+  <package id="Caliburn.Micro" version="3.0.0-beta1" targetFramework="net46" />
+  <package id="Caliburn.Micro.Core" version="3.0.0-beta1" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net453" />
   <package id="Fody" version="1.29.3" targetFramework="net46" developmentDependency="true" />
-  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net453" />
+  <package id="MahApps.Metro" version="1.1.3-ALPHA181" targetFramework="net46" />
   <package id="PropertyChanged.Fody" version="1.50.3" targetFramework="net46" developmentDependency="true" />
 </packages>
